--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "0.18.0",
+    "emoji-flags": "^1.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-country-flag": "^2.3.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
