--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-country-flag": "^2.3.0",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.7.5",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
