--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +41,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://confident-minsky-12a7bb.netlify.com",
   "main": "index.js",
   "repository": "https://github.com/noah0316/nomad_reactjs-for-beginners.git",
   "author": "Noah <noa316@naver.com>",
