--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "0.18.1",
     "emoji-flags": "^1.3.0",
+    "netlify-cli": "^2.62.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-country-flag": "^2.3.0",
