--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "0.18.1",
     "emoji-flags": "^1.3.0",
     "netlify-cli": "^2.62.0",
+    "object-path": "^0.11.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-country-flag": "^2.3.0",
